<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textSize="25sp"
        android:textColor="#ffff"
        android:gravity="center"
        android:background="@drawable/black_gradient"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:typeface="serif"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:backgroundTint="#000000"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

    </View>

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="40dp"
        android:drawableEnd="@drawable/ic_baseline_account_circle_24"
        android:hint="@string/email"
        android:textColorHint="#ffff"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#ffff" />

    <EditText
        android:id="@+id/pswReg"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
        android:hint="@string/password"
        android:textColorHint="#ffff"
        android:textColor="#ffff"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/checkPsw"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableEnd="@drawable/ic_baseline_check_24"
        android:hint="@string/confirmPsw"
        android:textColorHint="#ffff"
        android:textColor="#ffff"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/registrati"
        android:textColor="#ffff"
        android:onClick="validateAccount"
        android:background="@drawable/radious_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/se_sei_gi_registrato"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/accedi"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="goToLogin"
        android:gravity="center"
        android:textColor="#ffff"/>



</LinearLayout>