<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textSize="25sp"
        android:textColor="#ffff"
        android:gravity="center"
        android:background="@drawable/black_gradient"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:typeface="serif"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:backgroundTint="#000000"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/food" />


    <EditText
        android:id="@+id/emaillg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="40dp"
        android:drawableEnd="@drawable/ic_baseline_account_circle_24"
        android:hint="@string/email"
        android:textColorHint="#ffff"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#ffff" />

    <EditText
        android:id="@+id/pswlg"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
        android:hint="@string/password"
        android:textColorHint="#ffff"
        android:textColor="#ffff"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/log"
        android:onClick="goToHomepage"
        android:textColor="#ffff"
        android:background="@drawable/radious_button"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/forgotQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_dimenticata"
        android:layout_marginTop="10dp"
        android:textColor="#ffff"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/forgotPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recupera"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:textColor="#ffff"
        android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/regquest"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffff"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:onClick="register" />

    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/black_gradient" />

</LinearLayout>