<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_background">

    <TextView
        android:id="@+id/menuhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/menu"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:background="@drawable/black_gradient"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menuhead"
        android:columnCount="1"
        android:rowCount="3"
        android:background="@drawable/black_gradient">

    <androidx.cardview.widget.CardView
        android:id="@+id/panini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_rowWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/burger"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Panini"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bevande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_rowWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/drink"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bevande"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dolci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_rowWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/cupcake"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolci"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </GridLayout>

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="300dp"
        android:elevation="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="320dp"
            android:elevation="30dp"
        />
    </Button>

</RelativeLayout>